# rm-baofeng-radio-frequencies

./: 2m amateur band.csv  README.md  airports.csv  brazillian satcom pirates.csv  chirp.csv  csv_to_chirp.py  marine uhf.csv  marine vhf.csv  polycon.csv  pyproject.toml  simple uk light.csv  suppliers light.csv
chirp_files/: 2m_amateur_band.csv  70_cm_amateur_band.csv  airports.csv  baofeng_test_frequencies.csv  brazillian_satcom_pirates.csv  family_radio_service.csv  fireground.csv  general_mobile_radio_service.csv  marine_uhf.csv  marine_vhf.csv  multi_use_radio_service.csv  pmr446.csv  polycon.csv  programme_making_&_special_events.csv  simple_site_business.csv  simple_uk_light.csv  suppliers_light.csv
raw_data/: 70_cm_amateur_band.csv  airports.csv  baofeng_test_frequencies.csv  family_radio_service.csv  fireground.csv  general_mobile_radio_service.csv  marine_uhf.csv  metadata.jsonc  multi_use_radio_service.csv  pmr446.csv  programme_making_&_special_events.csv  simple_site_business.csv
