[tool.poetry]
name = "rm-baofeng-radio-frequencies"
version = "0.1.0"
description = ""
authors = ["Tom Whitwell <tom@whi.tw>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
